Removed list classes (used standard classes instead)